[package]
name = "nes-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "nes"

[dependencies]
bitflags = "2.5.0"
rand = "0.8.5"
sdl2 = { version = "0.37.0", optional = true }
sdl2_vita = { package = "sdl2", version = "0.37.0", features = ["use-pkgconfig"], optional = true }

[features]
default = ["sdl2"]
vita = ["sdl2_vita"]

[package.metadata.vita]
title_id = "RUSTVITA1"
title_name = "NES Emulator"

[profile.release]
panic = 'unwind'
lto = true
opt-level = 2
